Begin item factory.  Moved commands into items.  More robust dropping, cannot drop commands.  Inventory list on screen. Coloured text.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ endif()
 add_executable(ld40 WIN32
   src/game.cpp
   src/gl.cpp
+  src/items.cpp
   src/main.cpp
   src/maths.cpp
   src/renderer.cpp
